# dictate

./: .spoke-smoke-env  AGENTS.md  BACKLOG.md  CLAUDE.md  Dictate.spec  GEMINI.md  README.md  Spoke.spec  bench_decode_sync.py  entry_point.py  gemini_shim.py  pyproject.toml  services.yaml
bench/: speech_3min.m4a
dictate/: __init__.py  __main__.py  capture.py  glow.py  inject.py  input_tap.py  menubar.py
docs/: converge-operator-shell-architecture.md  developer-operator-surfaces.md  documentation_surfaces.toml  keyboard-grammar.md  local-smoke-runbook.md  operator-shell-roadmap.md  optical-field-consumer-contract.md  optical-field-contract.md  perceptasia-throughglass-provider-contract.md  review-authority-surfaces.md  review_surfaces.toml  screen-context-v1.md
donttype/: __main__.py  capture.py  glow.py  overlay.py  transcribe_qwen.py
scripts/: analyze-demo.py  assistant-overlay-retina-lasso-witness.py  beast-probe-broad.py  beast-probe.py  build-dmg.sh  build.sh  command-overlay-retina-lasso-witness.py  command-overlay-stress-witness.py  converge-carve.py  converge-embed.py  converge-migrate.py  demo-carve.py  four-pass-probe.py  launch-dev.sh  launch-main.sh  launch-smoke.sh  launch-target.sh  light-beast-probe.py  light-mode-probe.py  migrate-personality-smoke-grapheus-headers.py  perceptasia-throughglass-witness.py  personality-skill-smoke.py  seed-documentation-surfaces.py  setup-mlx-audio-server.sh  spoke-doctor.sh
spoke/: __init__.py  __main__.py  agent_backend_presenter.py  agent_backends.py  agent_sdk_operator.py  agent_shell_card_renderer.py  dedup.py  (+53 more)
(+85 files in other folders)
